--- a/config/database.yml
+++ b/config/database.yml
@@ -1,25 +1,22 @@
-# SQLite version 3.x
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
-#
-default: &default
-  adapter: postgresql
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  timeout: 5000
-
 development:
-  <<: *default
-  database: db/my_development
-
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
+  adapter: sqlite3
+  encoding: unicode
+  database: databasename
+  pool: 5
+  username: admin
+  password: admin
 test:
-  <<: *default
-  database: db/my_test
+  adapter: sqlite3
+  encoding: unicode
+  database: testdatabasename
+  pool: 5
+  username: admin
+  password: admin
 
 production:
-  <<: *default
-  database: db/my_production
+  adapter: postgresql
+  encoding: unicode
+  database: productiondatabasename
+  pool: 5
+  username: admin
+  password: admin
