--- a/config/storage.yml
+++ b/config/storage.yml
@@ -34,7 +34,7 @@ local:
 #   mirrors: [ amazon, google, microsoft ]
 amazon:
   service: S3
-  access_key_id: <%= ENV['BUCKETEER_AWS_ACCESS_KEY_ID'] %>
-  secret_access_key: <%= ENV['BUCKETEER_AWS_SECRET_ACCESS_KEY'] %>
-  region: <%= ENV['BUCKETEER_AWS_REGION'] %>
-  bucket: <%= ENV['BUCKETEER_BUCKET_NAME'] %>
+  access_key_id: <%= ENV['AWS_ACCESS_KEY_ID'] %>
+  secret_access_key: <%= ENV['AWS_SECRET_ACCESS_KEY'] %>
+  #region: <%= ENV['AWS_REGION'] %>
+  bucket: <%= ENV['BUCKET_NAME'] %>
